--- a/WatchShop.WebApp/Views/TrangChiTiet/DetailsDongHoThoiTrang.cshtml
+++ b/WatchShop.WebApp/Views/TrangChiTiet/DetailsDongHoThoiTrang.cshtml
@@ -67,7 +67,7 @@
         </div>
         <header class="section-heading">
             <a href="@Url.Action("FilterDongHoThoiTrang","TrangChiTiet", new { doiTuong = Model.DongHoThoiTrang.DoiTuong.TenDoiTuong })" class="btn btn-outline-primary float-right">Xem thêm</a>
-            <h3 class="section-title">Đồng hồ cùng loại</h3>
+            <h3 class="section-title">Gợi ý cho bạn</h3>
         </header><!-- sect-heading -->
 
 
