--- a/WatchShop.WebApp/Areas/Admin/Views/HoaDons/Details.cshtml
+++ b/WatchShop.WebApp/Areas/Admin/Views/HoaDons/Details.cshtml
@@ -28,18 +28,18 @@
         </tr>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.KhachHang.HoTen):
+                @Html.DisplayNameFor(model => model.HoTen):
             </th>
             <td>
-                @Html.DisplayFor(model => model.KhachHang.HoTen)
+                @Html.DisplayFor(model => model.HoTen)
             </td>
         </tr>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.KhachHang.SoDT):
+                @Html.DisplayNameFor(model => model.SoDT):
             </th>
             <td>
-                @Html.DisplayFor(model => model.KhachHang.SoDT)
+                @Html.DisplayFor(model => model.SoDT)
             </td>
         </tr>
         <tr>
