--- a/WatchShop.WebApp/Areas/Admin/Views/Shippers/Index.cshtml
+++ b/WatchShop.WebApp/Areas/Admin/Views/Shippers/Index.cshtml
@@ -150,6 +150,9 @@
                                     @Html.DisplayNameFor(model => model.NgayLapHD)
                                 </th>
                                 <th>
+                                    @Html.DisplayNameFor(model => model.SoDT)
+                                </th>
+                                <th>
                                     @Html.DisplayNameFor(model => model.DiaChiGiaoHang)
                                 </th>
                                 <th>
@@ -180,6 +183,9 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.NgayLapHD)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SoDT)
                                     </td>
                                     <td>
                                         @Html.DisplayFor(modelItem => item.DiaChiGiaoHang)
